--- a/gb/21/7/9/n13078705.md
+++ b/gb/21/7/9/n13078705.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/elibqk3256/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/elibqk3256/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/elibqk3256/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/elibqk3256/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>丈夫开车去医院时 纽约歌剧演员车内自己接生</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13078765-brave-mom-1200x720-600x400.jpeg" />
 <h6>专业歌剧歌手艾米丽?盖勒?哈德曼和她的新生女儿罗斯玛丽?克莱尔?哈德曼。 （哈德曼夫妇提供）
 </h6>
 <hr>
-	<p>【大纪元2021年07月09日讯】（英文大纪元记者Louise Bevan报导／文韵编译）医护人员到来之前，专业<ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E6%AD%8C%E5%89%A7%E6%AD%8C%E6%89%8B.md#1">歌剧歌手</a>艾米丽?盖勒?哈德曼（Emily Geller Hardman）在自家汽车后座生下她的女婴。她自己既是医生，又是助产士，还是陪产员。对怀第二个孩子的艾米丽，这自然分娩的梦想有点过于真实了。</p>
+	<p>【大纪元2021年07月09日讯】（英文大纪元记者Louise Bevan报导／文韵编译）医护人员到来之前，专业<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%AD%8C%E5%89%A7%E6%AD%8C%E6%89%8B.md#1">歌剧歌手</a>艾米丽?盖勒?哈德曼（Emily Geller Hardman）在自家汽车后座生下她的女婴。她自己既是医生，又是助产士，还是陪产员。对怀第二个孩子的艾米丽，这自然分娩的梦想有点过于真实了。</p>
 <p>“感觉很有力量”，35岁的艾米丽告诉《每日之声》，“我完全是自己做的。”</p>
 <p>这位知名的女中音歌唱家在与丈夫特拉维斯?哈德曼（Travis Hartman）康塔塔媒体（Cantata Media）首席执行官，5月14日在宾夕法尼亚州兰开斯特（Lancaster）参加一场婚礼派对。当晚怀孕37周的艾米丽半夜被破水吵醒；因没宫缩，她试图休息。</p>
 <p>“我以为我有很多时间。”三个小时后，艾米丽再次被“瞬间强烈”的宫缩惊醒。</p>
@@ -20,8 +20,8 @@
 <p>“我们知道要保持她温暖并尝试刺激她。”她告诉《人物》，“如果她的嘴巴或鼻子里有任何粘液，把它清出来。我们用毛巾擦拭她的身体，她在呼吸。”</p>
 <figure id="attachment_13078777" aria-describedby="caption-attachment-13078777" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13078777-Rosemary-Claire-Hardman.jpeg"><img class="size-large wp-image-13078777" src="https://i.epochtimes.com/assets/uploads/2021/07/id13078777-Rosemary-Claire-Hardman-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13078777" class="wp-caption-text">艾米丽刚出生的女儿。（哈德曼夫妇提供）</figcaption></figure>
 <p>24小时后，艾米丽和罗斯玛丽从新不伦瑞克（New Brunswick）的圣彼得（St. Peter’s）大学医院出院，健康状况良好。</p>
-<p>艾米丽告诉《每日之声》，“在车里分娩并不舒服。”然而，在没有帮助的情况下分娩对这位两个孩子的<ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E6%AF%8D%E4%BA%B2.md#1">母亲</a>来说是“了不起的力量”，她坚持认为，如果其他孕妇别无选择，她们肯定也可以这样做。</p>
-<figure id="attachment_13078801" aria-describedby="caption-attachment-13078801" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13078801-Emily_3.jpeg"><img class=" wp-image-13078801" src="https://i.epochtimes.com/assets/uploads/2021/07/id13078801-Emily_3-600x783.jpeg" alt="" width="450" b="588" /></a><figcaption id="caption-attachment-13078801" class="wp-caption-text">专业<ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E6%AD%8C%E5%89%A7%E6%AD%8C%E6%89%8B.md#1">歌剧歌手</a>艾米丽?盖勒?哈德曼（Emily Geller Hardman）和她的丈夫、康塔塔媒体（Cantata Media）首席执行官特拉维斯?哈德曼（Travis Hartman）。（哈德曼夫妇提供）</figcaption></figure>
+<p>艾米丽告诉《每日之声》，“在车里分娩并不舒服。”然而，在没有帮助的情况下分娩对这位两个孩子的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%AF%8D%E4%BA%B2.md#1">母亲</a>来说是“了不起的力量”，她坚持认为，如果其他孕妇别无选择，她们肯定也可以这样做。</p>
+<figure id="attachment_13078801" aria-describedby="caption-attachment-13078801" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13078801-Emily_3.jpeg"><img class=" wp-image-13078801" src="https://i.epochtimes.com/assets/uploads/2021/07/id13078801-Emily_3-600x783.jpeg" alt="" width="450" b="588" /></a><figcaption id="caption-attachment-13078801" class="wp-caption-text">专业<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%AD%8C%E5%89%A7%E6%AD%8C%E6%89%8B.md#1">歌剧歌手</a>艾米丽?盖勒?哈德曼（Emily Geller Hardman）和她的丈夫、康塔塔媒体（Cantata Media）首席执行官特拉维斯?哈德曼（Travis Hartman）。（哈德曼夫妇提供）</figcaption></figure>
 <p>她说，“最后，我认为生产是一个自然过程，大多数都很顺利，不需要太多干预。”并补充说，无论他们的孩子如何出生，生孩子的人都是“摇滚明星”。</p>
 <p>“关于生育的事情是，生育无处不在，人们在各个地方生育。”她告诉《今日美国》，“碰巧我的是在车里。”</p>
 <p>责任编辑：韩玉?#</p>
@@ -30,41 +30,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/11/12/30/n3472475.md#1">借助化妆镜 英国助产士替自己接生</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/15/7/19/n4483780.md#1">肚里宝宝等不及 美妇车上产子影片曝光</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/17/2/10/n8797447.md#1">缘分真奇妙 消防员接生女婴两天后成养父</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/17/4/18/n9050017.md#1">打破妇产科潜规则 台医师亲手为女儿接生</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/12/30/n3472475.md#1">借助化妆镜 英国助产士替自己接生</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/19/n4483780.md#1">肚里宝宝等不及 美妇车上产子影片曝光</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/2/10/n8797447.md#1">缘分真奇妙 消防员接生女婴两天后成养父</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/4/18/n9050017.md#1">打破妇产科潜规则 台医师亲手为女儿接生</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10280071.md#1" target="_blank">路目：孔子诛杀少正卯 惹恼了谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10997952.md#1" target="_blank">女儿获9万澳元奖学金 澳洲母女感恩法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/6/14/n13020872.md#1">【命理】彼此等候三十年的夫妻 结局夫荣妻贵</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/2/n13064296.md#1">【未解之谜】绝不能动的中国文物</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13073533.md#1">死亡20分钟灵魂出窍的经验 改变他的一生</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/6/26/n13049744.md#1">观画不悟 宋朝宰相错失道缘</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13072311.md#1">【未解之谜】西藏的神秘现象（2）高僧圆寂人体虹化</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13077225.md#1">【秦鹏直播】美日台湾战略清晰 中共还敢动武？</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13077266.md#1">【横河观点】外行成溯源猎手？柳叶刀2.0交火</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076229.md#1">【唐浩视界】中共再喊犯台？美布局五大战线</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074809.md#1">【远见快评】习近平发亡党之音？日相一语惊人</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074268.md#1">中国太太再打人 比利时大使被要求立刻回国</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13072561.md#1">59岁刘德华从影40年 自曝最后悔拍一部电影</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074748.md#1">黄秋生遭台湾节目撤换？制作单位详尽回应</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13072561.md#1">59岁刘德华从影40年 自曝最后悔拍一部电影</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13072394.md#1">江一燕两度拒拍一部戏 成就刘诗诗爆红及姻缘</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076834.md#1">江宏杰福原爱协议离婚 共同监护一对儿女</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074584.md#1">秦岚家中冰箱贴封条 自律留言笑翻网友</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13071655.md#1">营养师的强力护眼配方：喝一杯有5种好处</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13071217.md#1">蛀牙竟与血糖有关！这些食物降糖、防蛀牙</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074878.md#1">高血压3原因？中医教你降压 有时比降压药有效</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13073533.md#1">死亡20分钟灵魂出窍的经验 改变他的一生</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076696.md#1">厨房里就有！肉桂等10种食材 是天然排毒圣品</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/elibqk3256/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/elibqk3256/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/9/n13078705.htm">丈夫开车去医院时 纽约歌剧演员车内自己接生</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/9/n13078705.htm">丈夫开车去医院时 纽约歌剧演员车内自己接生</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/elibqk3256/djy/blob/master/gb/21/7/9/n13078705.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/elibqk3256/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/elibqk3256/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/elibqk3256/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/7/9/n13078705.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
